<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.theme.Act1"
    android:layout_margin="24dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/teal_200"
        android:text="@string/web"
        android:textSize="40sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@+id/text"
        android:background="#ffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/languages_used"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />


        <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/textshape"
            android:gravity="center"
            android:text="JavaScript"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/textshape"
            android:gravity="center"
            android:text="Html"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/textshape"
            android:gravity="center"
            android:text="CSS"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.376" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:background="@drawable/textshape"
            android:gravity="center"
            android:text="@string/java"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.924"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.376" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailsweb"
                android:textColor="#000"
                android:textSize="20sp"/>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>